--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<div class="container">
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+	<div class="container">
 	<!-- code here -->
-	<div class="card">
-		<div class="card-image">	
-			<h2 class="card-heading">
+		<div class="card">
+			<div class="card-image">	
+				<h2 class="card-heading">
 				Get started
-				<small>Let us create your account</small>
-			</h2>
-		</div>
-		<form class="card-form">
-			<div class="input">
-				<input type="text" class="input-field" value="Alexander Parkinson" required/>
-				<label class="input-label">Full name</label>
+					<small>Let us create your account</small>
+				</h2>
 			</div>
+			<form class="card-form">
+				<div class="input">
+					<input type="text" class="input-field" value="Alexander Parkinson" required/>
+					<label class="input-label">Full name</label>
+				</div>
 						<div class="input">
 				<input type="text" class="input-field" value="vlockn@gmail.com" required/>
 				<label class="input-label">Email</label>
@@ -29,3 +35,5 @@
 		</div>
 	</div>
 </div>
+</body>
+</html>
