--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 					<input type="text" class="input-field" value="Alexander Parkinson" required/>
 					<label class="input-label">Full name</label>
 				</div>
-						<div class="input">
-				<input type="text" class="input-field" value="vlockn@gmail.com" required/>
-				<label class="input-label">Email</label>
+				<div class="input">
+					<input type="text" class="input-field" value="vlockn@gmail.com" required/>
+					<label class="input-label">Email</label>
+				</div>
+				<div class="input">
+					<input type="password" class="input-field" required/>
+					<label class="input-label">Password</label>
+				</div>
+				<div class="action">
+					<button class="action-button">Submit</button>
+				</div>
+			</form>
+			<div class="card-info">
+				<p>By signing up you are agreeing to our <a href="#">Terms and Conditions</a></p>
 			</div>
-						<div class="input">
-				<input type="password" class="input-field" required/>
-				<label class="input-label">Password</label>
-			</div>
-			<div class="action">
-				<button class="action-button">Get started</button>
-			</div>
-		</form>
-		<div class="card-info">
-			<p>By signing up you are agreeing to our <a href="#">Terms and Conditions</a></p>
 		</div>
 	</div>
-</div>
 </body>
 </html>
