--- a/index.html
+++ b/index.html
@@ -15,13 +15,20 @@
 			</div>
 			<form class="card-form">
 				<div class="input">
-					<input type="text" class="input-field" value="Alexander Parkinson" required/>
-					<label class="input-label">Full name</label>
+					<input type="text" class="input-field" required/>
+					<label class="input-label">Full Name</label>
 				</div>
 				<div class="input">
-					<input type="text" class="input-field" value="vlockn@gmail.com" required/>
+					<input type="text" class="input-field" required/>
 					<label class="input-label">Email</label>
 				</div>
+				<div class="input">
+					<input type="text" class="input-field" required/>
+					<label class="input-label">Phone</label>
+				</div>
+				<select>
+					<option value="sdsd"/>
+				</select>
 				<div class="input">
 					<input type="password" class="input-field" required/>
 					<label class="input-label">Password</label>
