--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<label class="input-label">Phone</label>
 				</div>
 				<select>
-					<option value="GitHub" id="company1"></option>
+					<option value="github" id="company1">GitHub</option>
 				</select>
 				<div class="input">
 					<input type="password" class="input-field" required/>
