--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
 				<select>
 					<option value="github" id="company1">GitHub</option>
 				</select>
+				<label class="input-label">Company</label>
 				<div class="input">
 					<input type="password" class="input-field" required/>
 					<label class="input-label">Password</label>
 				</div>
+				
 				<div class="action">
 					<button class="action-button">Submit</button>
 				</div>
